// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Button Active 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <button
      class="StyledButton-sc-323bzc-0 eFzidw sc-bqiRlB sc-ksdxgE edofBN dJfWty sc-dJjYzT cGuTUx"
      type="button"
    >
      Active
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <button
      class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN jaIwDv sc-dJjYzT cGuTUx"
      type="button"
    >
      Default
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <button
      class="StyledButton-sc-323bzc-0 djIyDn sc-bqiRlB sc-hBUSln edofBN jaIwDv sc-dJjYzT cGuTUx"
      disabled=""
      type="button"
    >
      Disabled
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Icon Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <button
      class="StyledButton-sc-323bzc-0 hclgal sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT cGuTUx"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-recycle "
        data-icon="recycle"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M180.2 243.1C185 263.9 162.2 280.2 144.1 268.8L119.8 253.6l-50.9 81.43c-13.33 21.32 2.004 48.98 27.15 48.98h32.02c17.64 0 31.98 14.32 31.98 31.96c0 17.64-14.34 32.05-31.98 32.05H96.15c-75.36 0-121.3-82.84-81.47-146.8L65.51 219.8L41.15 204.5C23.04 193.1 27.66 165.5 48.48 160.7l91.43-21.15C148.5 137.7 157.2 142.9 159.2 151.6L180.2 243.1zM283.1 78.96l41.25 66.14l-24.25 15.08c-18.16 11.31-13.57 38.94 7.278 43.77l91.4 21.15c8.622 1.995 17.23-3.387 19.21-12.01l21.04-91.43c4.789-20.81-17.95-37.05-36.07-25.76l-24.36 15.2L337.4 45.14c-37.58-60.14-125.2-60.18-162.8-.0617L167.2 56.9C157.9 71.75 162.5 91.58 177.3 100.9c14.92 9.359 34.77 4.886 44.11-10.04l7.442-11.89C241.6 58.58 270.9 59.33 283.1 78.96zM497.3 301.3l-16.99-27.26c-9.336-14.98-29.06-19.56-44.04-10.21c-14.94 9.318-19.52 29.15-10.18 44.08l16.99 27.15c13.35 21.32-1.984 49-27.14 49h-95.99l.0234-28.74c0-21.38-25.85-32.09-40.97-16.97l-66.41 66.43c-6.222 6.223-6.222 16.41 .0044 22.63l66.42 66.34c15.12 15.1 40.95 4.386 40.95-16.98l-.0234-28.68h95.86C491.2 448.1 537.2 365.2 497.3 301.3z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Link 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <a
      class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN jaIwDv sc-dJjYzT cGuTUx"
      href="#"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Core/Button Outlined 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <button
      class="StyledButton-sc-323bzc-0 dEhBwt sc-bqiRlB sc-hBUSln edofBN jaIwDv sc-dJjYzT cGuTUx"
      type="button"
    >
      Outlined
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Plain 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <button
      class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT cGuTUx"
      type="button"
    >
      Plain
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Primary 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <button
      class="StyledButton-sc-323bzc-0 cLGAaT sc-bqiRlB sc-ksdxgE edofBN gWXKEC sc-dJjYzT cGuTUx"
      type="button"
    >
      Primary
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button Underlined 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <button
      class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt sc-ieecCq edofBN hOYLYz feeXzs sc-dJjYzT cGuTUx"
      type="button"
    >
      Underlined
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button With Confirmation 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <button
      class="StyledButton-sc-323bzc-0 ehgFzb sc-bqiRlB sc-ksdxgE edofBN eMbKsS sc-dJjYzT cGuTUx"
      type="button"
    >
      Dangerous
    </button>
  </div>
</div>
`;

exports[`Storyshots Core/Button With Icon 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <button
      class="StyledButton-sc-323bzc-0 idryEU sc-bqiRlB sc-bkkeKt edofBN hOYLYz sc-dJjYzT cGuTUx"
      type="button"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hLqWpM"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-expand "
          data-icon="expand"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128 32H32C14.31 32 0 46.31 0 64v96c0 17.69 14.31 32 32 32s32-14.31 32-32V96h64c17.69 0 32-14.31 32-32S145.7 32 128 32zM416 32h-96c-17.69 0-32 14.31-32 32s14.31 32 32 32h64v64c0 17.69 14.31 32 32 32s32-14.31 32-32V64C448 46.31 433.7 32 416 32zM128 416H64v-64c0-17.69-14.31-32-32-32s-32 14.31-32 32v96c0 17.69 14.31 32 32 32h96c17.69 0 32-14.31 32-32S145.7 416 128 416zM416 320c-17.69 0-32 14.31-32 32v64h-64c-17.69 0-32 14.31-32 32s14.31 32 32 32h96c17.69 0 32-14.31 32-32v-96C448 334.3 433.7 320 416 320z"
            fill="currentColor"
          />
        </svg>
        <div
          class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hDcxXI"
        />
        With icon
      </div>
    </button>
  </div>
</div>
`;
